# ellies-on-it

./: README.md  console.py  pyproject.toml
application/: add_account_command.py  add_account_command_handler.py  add_entry_command.py  add_entry_command_handler.py  get_accounts_query.py  get_accounts_query_handler.py
domain/: accounts.py
infrastructure/: local_persitence.py  persitence.py
interfaces/: persistence_interface.py
tests/: test_accounts.py  test_add_account_command_handler.py  test_config.py  test_get_accounts_query.py  test_local_persistence.py  test_view_account_query_handler.py
tests/doubles/: persistence_spy.py
