[tool.poetry]
name = "ellies-on-it"
version = "0.1.0"
description = ""
authors = ["Jonathan <Jjh201104@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.6.0"
pandas = "^1.5.0"
pick = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
